--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,46 @@
-# Compiled class file
-*.class
+# --- OS / Editor ---
+.DS_Store
+Thumbs.db
 
-# Log file
-*.log
+.idea/
+.vscode/
+*.iml
 
-# BlueJ files
-*.ctxt
+# --- Node / Next.js 공통 ---
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Next.js build / cache
+apps/frontend/.next/
+apps/frontend/out/
+apps/frontend/.turbo/
+apps/frontend/.vercel/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Frontend env
+apps/frontend/.env
+apps/frontend/.env.*
+apps/frontend/env.local
+apps/frontend/env.development.local
+apps/frontend/env.production.local
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# --- Spring Boot / Maven ---
+apps/backend/target/
+apps/backend/.mvn/wrapper/maven-wrapper.jar
+apps/backend/.mvn/wrapper/maven-wrapper.properties
+
+# Backend env & logs
+apps/backend/.env
+apps/backend/.env.*
+apps/backend/logs/
+apps/backend/*.log
+
+# --- Uploads / tmp ---
+apps/backend/uploads/
+tmp/
+*.tmp
+
+# --- Docker ---
+docker-data/
