feat: s3 파일 서비스 추가

--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -31,6 +31,20 @@ spring.ai.openai.api-key=${OPENAI_API_KEY:your_openai_api_key_here}
 spring.ai.openai.chat.options.model=${OPENAI_MODEL:gpt-4.1-mini}
 spring.ai.openai.chat.options.temperature=${OPENAI_TEMPERATURE:0.7}
 
+# AWS Region
+aws.region=${AWS_REGION:ap-northeast-2}
+
+# Access Keys
+aws.access-key-id=${AWS_ACCESS_KEY_ID:}
+aws.secret-access-key=${AWS_SECRET_ACCESS_KEY:}
+aws.session-token=${AWS_SESSION_TOKEN:}
+
+# S3 Bucket Name
+aws.s3.bucket=${S3_BUCKET:}
+
+# S3 Base Directory (default: uploads)
+aws.s3.base-directory=${S3_BASE_DIRECTORY:uploads}
+
 # Socket.IO Server Configuration
 socketio.server.host=0.0.0.0
 socketio.server.port=${WS_PORT:5002}
