--- a/apps/backend/src/main/resources/application.properties
+++ b/apps/backend/src/main/resources/application.properties
@@ -78,5 +78,5 @@ management.prometheus.metrics.export.enabled=true
 management.metrics.tags.application=${spring.application.name:ktb-chat-backend}
 # Inject HOSTNAME environment variable if available
 management.metrics.tags.host=${HOSTNAME:unknown}
-chat.store.type=${CHAT_STORE_TYPE:local}
-socketio.cluster.enabled=${SOCKETIO_CLUSTER_ENABLED:false}
+chat.store.type=redis
+socketio.cluster.enabled=true
